--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,8 +1,8 @@
-name: continuous-integration
+name: samuel-nwoye-website
 on: [push, pull_request, release]
 jobs:
   build:
-    name: jenkinsci
+    name: samuel-nwoye-website
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
