--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Trigger Jenkinsfile
-      uses: jenkinsci/jenkins@master
+      uses: jenkinsci/jenkins
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
