--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -5,10 +5,15 @@ jobs:
     name: samuel-nwoye-website
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Trigger Jenkinsfile
-      run: echo Triggered Jenkinsfile
-      uses: jenkins/jenkins #jenkinsci/jenkinsfile-runner-github-actions/jenkinsfile-runner-prepackaged@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: appleboy/jenkins-action@master #actions/checkout@master
+      name: Trigger Jenkinsfile
+      with:
+        url: "http://52.16.127.152:8080"
+        user: "samuel"
+        token: ${{ secrets.GITHUB_TOKEN }}
+        job: "samuel-nwoye-website"
+      #run: echo Triggered Jenkinsfile
+      #uses: jenkins/jenkins #jenkinsci/jenkinsfile-runner-github-actions/jenkinsfile-runner-prepackaged@master
+      # env:
+      #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
